# populis-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ZKPASSPORT_VAULT_ATTESTATION_V1.md
populis_puzzles/: __init__.py  admin_authority_driver.py  admin_authority_inner.clsp  admin_authority_inner.clsp.hex  admin_authority_v2_driver.py  admin_authority_v2_inner.clsp  admin_authority_v2_inner.clsp.hex  cat_truths.clib  condition_codes.clib  eip712_helpers.py  governance_singleton_inner.clsp  governance_singleton_inner.clsp.hex  mint_offer_delegate.clsp  mint_offer_delegate.clsp.hex  mint_proposal_driver.py  mint_proposal_inner.clsp  mint_proposal_inner.clsp.hex  mint_proposal_inner_v2.clsp  mint_proposal_inner_v2.clsp.hex  mint_proposal_v2_driver.py  p2_deed_settlement.clsp  p2_deed_settlement.clsp.hex  p2_pool.clsp  p2_pool.clsp.hex  p2_vault.clsp  p2_vault.clsp.hex  pgt_driver.py  pgt_free_inner.clsp  pgt_free_inner.clsp.hex  pgt_locked_inner.clsp  pgt_locked_inner.clsp.hex  pgt_tail.clsp  pool_singleton_inner.clsp  pool_singleton_inner.clsp.hex  pool_token_tail.clsp  pool_token_tail.clsp.hex  populis_constants.clib  property_registry_driver.py  property_registry_inner.clsp  property_registry_inner.clsp.hex  (+26 more)
research/: POPULIS_ADMIN_AUTHORITY_V2_DESIGN.md  POPULIS_VAULT_UPGRADE_DESIGN.md
scripts/: a5_roster_candidate_fixture_cases.py  dump_a5_roster_candidate_fixture.py  dump_mint_proposal_v2_fixtures.py  dump_mint_proposal_v2_puzzle_hex.sh  dump_pgt_vote_spend_fixtures.py  dump_v2_fixtures.py  dump_v2_puzzle_hex.sh  dump_vault_launch_fixtures.py  (+1 more)
(+40 files in other folders)
